--- a/main.tex
+++ b/main.tex
@@ -1102,7 +1102,31 @@
   また, 各元の位数を比較することにより$H \cap K = 1_G$である.
   $h_1, h_2 \in H$, $k_1, k_2 \in K$について, もし$h_1k_1 = h_2k_2$ならば$h_2^{-1}h_1 = k_2k_1^{-1} = 1_G$より
   $h_1 = h_2$かつ$k_1 = k_2$である. したがって$\abs{HK} = \abs{H}\abs{K} = 6$なので$HK = G$.
-  命題2.9.2より$G \cong H \times K \cong \Z{3} \times \Z{2} \cong \Z{6}$.
+  命題2.9.2より$G \cong H \times K \cong \Z{3} \times \Z{2} \cong \Z{6}$.\\
+  (4) $G$が非可換であるとする. $x$を位数$3$の元, $H = \langle x \rangle$として, $y$を$G/H$の生成元の代表元とする.
+  (2) でみたように, $y$は位数$2$の元である.
+  また$G$の任意の元は, $H$の生成元$x$を用いて$y^kx^l\ (k = 0, 1,\ l = 0, 1, 2)$と書ける.
+  もし$y$が$x$と可換であれば, $y^{k_1}x^{l_1}y^{k_2}x^{l_2} = y^{k_2}x^{l_2}y^{k_1}x^{l_1}$であるから,
+  $G$は可換となり矛盾. したがって$y$と$x$は非可換である.
+  また, $(x^2)^2 = x$より, $y$は$x^2$とも非可換である. (もし$y$が$x^2$と可換なら$x = (x^2)^2$とも可換となって矛盾.)
+  そこで, $y, xyx^{-1}, x^2yx^{-2}$を考えると,
+  $y$と$x$が非可換かつ$y$と$x^2$が非可換であることからこれらは互いに異なる元であり,
+  また明らかに互いに共役である.
+  さらに$y$が位数$2$であることからこれらは単位元とは異なる元であり, $(x^kyx^{-k})^2 = x^ky^2k^{-k} = 1_G$より位数は$2$である.
+  $G$にはこれら$3$つの元の他には$H$の元 (位数は$1$か$3$) しかないので, 位数$2$の元はこの$3$つだけである.\\
+  (5) $\rho(g)(i) = \rho(g)(j) \Rightarrow gx_ig^{-1} = gx_jg^{-1} \Rightarrow x_i = x_j$であるから,
+  $\rho(g)$は単射. したがって$\rho(g) \in \mathfrak{S}_3$.
+  また$x_{\rho(gh)(i)}
+  = ghx_i(gh)^{-1}
+  = gx_{\rho(h)(i)}g^{-1}
+  = x_{\rho(g)(\rho(h)(i))}
+  = x_{(\rho(g)\rho(h))(i)}$
+  より, $\rho(gh) = \rho(g)\rho(h)$. すなわち$\rho$は準同型である.
+  もし$\rho(g) = 1_{\mathfrak{S}_3}$ならば$gx_ig^{-1} = x_i\ (i = 1, 2, 3)$
+  すなわち$g$と$x_i$は可換であるが, (4) で見たように$y$は$x, x^2$と非可換なので$g$は$x, x^2$とは異なる元である.
+  また, $x_1, x_2, x_3$は$yH$の元なので$y, yx, yx^2$と書けるはずであるが,
+  これらは$y$と$x$が非可換であることから互いに非可換である. よって$g$は$x_1, x_2, x_3$のいずれとも異なる.
+  したがって$g = 1_G$であるから, $\rho$は単射. $G$と$\mathfrak{S}_3$の位数が等しいことから, $\rho$は同型.
 \end{ans}
 
 \end{document}
