--- a/main.tex
+++ b/main.tex
@@ -1125,7 +1125,7 @@
   もし$\rho(g) = 1_{\mathfrak{S}_3}$ならば$gx_ig^{-1} = x_i\ (i = 1, 2, 3)$
   すなわち$g$と$x_i$は可換であるが, (4) で見たように$y$は$x, x^2$と非可換なので$g$は$x, x^2$とは異なる元である.
   また, $x_1, x_2, x_3$は$yH$の元なので$y, yx, yx^2$と書けるはずであるが,
-  これらは$y$と$x$が非可換であることから互いに非可換である. よって$g$は$x_1, x_2, x_3$のいずれとも異なる.
+  これらは$y$が$x, x^2$と非可換であることから互いに非可換である. よって$g$は$x_1, x_2, x_3$のいずれとも異なる.
   したがって$g = 1_G$であるから, $\rho$は単射. $G$と$\mathfrak{S}_3$の位数が等しいことから, $\rho$は同型.
 \end{ans}
 
