--- a/main.tex
+++ b/main.tex
@@ -1129,4 +1129,15 @@
   したがって$g = 1_G$であるから, $\rho$は単射. $G$と$\mathfrak{S}_3$の位数が等しいことから, $\rho$は同型.
 \end{ans}
 
+\fakesection{第3章 群を学ぶ理由}
+\fakesection{第4章 群の作用}
+
+\fakesubsection{4.1 群の作用}
+
+\begin{ans}
+  $x_2x_1 = x_2,\ x_2x_2 = x_1,\ x_2x_3 = x_4,\ x_2x_4 = x_3$
+  より, $\rho(x_2) = (1\ 2)(3\ 4)$.
+  同様にして, $\rho(x_3) = (1\ 3)(2\ 4)$, $\rho(x_4) = (1\ 4)(2\ 3)$.
+\end{ans}
+
 \end{document}
