--- a/main.tex
+++ b/main.tex
@@ -1140,4 +1140,19 @@
   同様にして, $\rho(x_3) = (1\ 3)(2\ 4)$, $\rho(x_4) = (1\ 4)(2\ 3)$.
 \end{ans}
 
+\begin{ans}
+  \begin{align*}
+    &(2\ 3)1 = (2\ 3)\\
+    &(2\ 3)(1\ 2) = (1\ 3\ 2)\\
+    &(2\ 3)(1\ 3) = (1\ 2\ 3)\\
+    &(2\ 3)(2\ 3) = 1\\
+    &(2\ 3)(1\ 2\ 3) = (1\ 3)\\
+    &(2\ 3)(1\ 3\ 2) = (1\ 2)\\
+  \end{align*}
+  となるので$\rho((2\ 3)) = \begin{pmatrix*}
+    1 & 2 & 3 & 4 & 5 & 6\\
+    4 & 6 & 5 & 1 & 3 & 2
+  \end{pmatrix*} = (1\ 4)(2\ 6)(3\ 5)$.
+\end{ans}
+
 \end{document}
