--- a/main.tex
+++ b/main.tex
@@ -1155,4 +1155,13 @@
   \end{pmatrix*} = (1\ 4)(2\ 6)(3\ 5)$.
 \end{ans}
 
+\begin{ans}
+  \begin{align*}
+    &(1\ 3\ 2)x_1 = (1\ 3\ 2) \in x_3H\\
+    &(1\ 3\ 2)x_2 = 1 \in x_1H\\
+    &(1\ 3\ 2)x_3 = (1\ 2\ 3)
+  \end{align*}
+  となるので$\rho((1\ 3\ 2)) = (1\ 3\ 2)$.
+\end{ans}
+
 \end{document}
