--- a/main.tex
+++ b/main.tex
@@ -1177,4 +1177,31 @@
   となるので$\rho((1\ 2\ 3)) = (2\ 4\ 3)$.
 \end{ans}
 
+\begin{ans}
+  (1)
+  \begin{align*}
+    &ix_1 = i \cdot 1 = i = x_3\\
+    &ix_2 = i \cdot (-1) = -i = x_4\\
+    &ix_3 = i \cdot i = -1 = x_2\\
+    &ix_4 = i \cdot (-i) = 1 = x_1\\
+    &ix_5 = i \cdot j = k = x_7\\
+    &ix_6 = i \cdot (-j) = -k = x_8\\
+    &ix_7 = i \cdot k = -j = x_6\\
+    &ix_8 = i \cdot (-k) = j = x_5
+  \end{align*}
+  となるので$\rho(i) = (1\ 3\ 2\ 4)(5\ 7\ 6\ 8)$.\\
+  (2)
+  \begin{align*}
+    &kx_1 = k \cdot 1 = k = x_7\\
+    &kx_2 = k \cdot (-1) = -k = x_8\\
+    &kx_3 = k \cdot i = j = x_5\\
+    &kx_4 = k \cdot (-i) = -j = x_6\\
+    &kx_5 = k \cdot j = -i = x_4\\
+    &kx_6 = k \cdot (-j) = i = x_3\\
+    &kx_7 = k \cdot k = -1 = x_2\\
+    &kx_8 = k \cdot (-k) = 1 = x_1
+  \end{align*}
+  となるので$\rho(k) = (1\ 7\ 2\ 8)(3\ 5\ 4\ 6)$.
+\end{ans}
+
 \end{document}
