--- a/main.tex
+++ b/main.tex
@@ -1204,4 +1204,33 @@
   となるので$\rho(k) = (1\ 7\ 2\ 8)(3\ 5\ 4\ 6)$.
 \end{ans}
 
+\begin{ans}
+  (1)
+  \begin{align*}
+    &yy^{-1} = 1\\
+    &yxy^{-1} = x^3\\
+    &yx^2y^{-1} = (yxy^{-1})^2 = (x^3)^2 = x^6\\
+    &yx^3y^{-1} = (yxy^{-1})^3 = (x^3)^3 = x^9 = x^2\\
+    &yx^4y^{-1} = (yxy^{-1})^4 = (x^3)^4 = x^{12} = x^5\\
+    &yx^5y^{-1} = (yxy^{-1})^5 = (x^3)^5 = x^{15} = x\\
+    &yx^6y^{-1} = (yxy^{-1})^6 = (x^3)^6 = x^{18} = x^4\\
+  \end{align*}
+  となるので, $\Ad{y}$の$\langle x \rangle$への作用は置換
+  $\sigma = (1\ 3\ 2\ 6\ 4\ 5)$で表される. (ただしここでは$x^i = i$と考えている.)
+  $\sigma^{100}(1) = \sigma^{6 \cdot 16 + 4}(1) = \sigma^{4}(1) = 4$なので, $y^{100}xy^{-100} = x^4$.\\
+  (2)
+  \begin{align*}
+    &yy^{-1} = 1\\
+    &yxy^{-1} = x^5\\
+    &yx^2y^{-1} = (yxy^{-1})^2 = (x^5)^2 = x^{10} = x^3\\
+    &yx^3y^{-1} = (yxy^{-1})^3 = (x^5)^3 = x^{15} = x\\
+    &yx^4y^{-1} = (yxy^{-1})^4 = (x^5)^4 = x^{20} = x^6\\
+    &yx^5y^{-1} = (yxy^{-1})^5 = (x^5)^5 = x^{25} = x^4\\
+    &yx^6y^{-1} = (yxy^{-1})^6 = (x^5)^6 = x^{30} = x^2\\
+  \end{align*}
+  となるので, $\Ad{y}$の$\langle x \rangle$への作用は置換
+  $\sigma = (1\ 5\ 4\ 6\ 2\ 3)$で表される. (ただしここでは$x^i = i$と考えている.)
+  $\sigma^{1000}(1) = \sigma^{6 \cdot 166 + 4}(1) = \sigma^{4}(1) = 2$なので, $y^{1000}xy^{-1000} = x^2$.\\
+\end{ans}
+
 \end{document}
