--- a/main.tex
+++ b/main.tex
@@ -1281,4 +1281,13 @@
   したがって$G \cdot \bm{x} = \{y \mid y \in \mathbb{R}^2\setminus[0, 0]\}$.
 \end{ans}
 
+\begin{ans}
+  (1) $1$を含む共役類は明らかに$\{1\}$である.
+  また$-1$も他の元と可換なので, $-1$を含む共役類は$\{-1\}$.
+  また$i$については$ij = j \cdot (-i)$, $ik = k \cdot (-i)$などから$i$を含む共役類は$\{\pm i\}$.
+  同様に, 他の共役類は$\{\pm j\}$, $\{\pm k\}$である.\\
+  (2) $1$はすべての元と可換なので中心化群は$G$.
+  $i$と可換であるのは$\{\pm 1, \pm i\}$だけなので、これが$i$の中心化群である.
+\end{ans}
+
 \end{document}
