--- a/main.tex
+++ b/main.tex
@@ -1290,4 +1290,22 @@
   $i$と可換であるのは$\{\pm 1, \pm i\}$だけなので、これが$i$の中心化群である.
 \end{ans}
 
+\begin{ans}
+  (1) $\sigma$は
+  $A_1 \rightarrow A_2 \rightarrow A_3 \rightarrow A_4 \rightarrow A_5 \rightarrow A_6 \rightarrow A_7 \rightarrow A_8 \rightarrow A_1$
+  と作用するので,
+  $\sigma l_1 = l_2$, $\sigma l_2 = l_3$, $\sigma l_3 = l_4$, $\sigma l_4 = l_1$である.
+  よって$\rho(\sigma) = (1\ 2\ 3\ 4)$.
+  $\tau$は$A_1 \rightarrow A_1$,
+  $A_2 \rightarrow A_8 \rightarrow A_2$,
+  $A_3 \rightarrow A_7 \rightarrow A_3$,
+  $A_4 \rightarrow A_6 \rightarrow A_4$,
+  $A_5 \rightarrow A_5$と作用するので,
+  $\sigma l_1 = l_1$, $\sigma l_2 = l_4$, $\sigma l_3 = l_3$, $\sigma l_4 = l_2$である.
+  よって$\rho(\tau) = (2\ 4)$.\\
+  (2) $D_8 \ni g$で$l_1$が不変であることは, $g$によって$A_1$が$A_1$または$A_5$に移ることと同値である.
+  $A_1$が$A_1$に移すのは$1, \tau$であり, $A_1$を$A_5$に移すのは$\sigma^4, \tau\sigma^4$なので,
+  $l_1$の安定化群は$\{1, \sigma^4, \tau, \tau\sigma^4\}$.
+\end{ans}
+
 \end{document}
