--- a/main.tex
+++ b/main.tex
@@ -1308,4 +1308,53 @@
   $l_1$の安定化群は$\{1, \sigma^4, \tau, \tau\sigma^4\}$.
 \end{ans}
 
+\begin{ans}
+  命題4.1.10の表記に倣って, $D_n = \{1, t, \cdots , t^{n-1}, r, rt, \cdots , rt^{n-1}\}$と書くことにする.\\
+  (a)(1)
+  \begin{align*}
+    &t^lt^k(t^l)^{-1} = t^k\\
+    &rt^lt^k(rt^l)^{-1} = rt^lt^kt^{-l}r = rt^kr = t^{-k}\\
+    &t^lrt^k(t^l)^{-1} = rt^{-l}t^kt^{-l} = rt^{k-2l}\\
+    &rt^lrt^k(rt^l)^{-1} = rt^lrt^kt^{-l}r = rt^lt^{-k+l} = rt^{-k+2l}
+  \end{align*}
+  より, $D_4$の共役類は
+  $\{
+    \{1\},
+    \{t, t^3\},
+    \{t^2\},
+    \{r, rt^2\},
+    \{rt, rt^3\}
+  \}$
+  である.\\
+  (a)(2) $\{1\}$, $\{t^2\}$については, 明らかに中心化群は$D_4$である.
+  $t$については, 上の式から$\{1, t, t^2, t^3\}$が中心化群である (代表元として$t^3$を選んでも同じ).
+  $r$については, 上の$3$つ目の式で$l = 0, 2$, 上の$4$つ目の式で$l = 0, 2$の場合が対応するので,
+  中心化群は$\{1, t^2, r, rt^2\}$である (代表元として$rt^2$を選んでも同じ).
+  $rt$については, 上の$3$つ目の式で$l = 0, 2$, 上の$4$つ目の式で$l = 1, 3$の場合が対応するので,
+  中心化群は$\{1, t^2, rt, rt^3\}$である (代表元として$rt^3$を選んでも同じ).\\
+  (b)(1)
+  上の$4$つの式から, $D_5$の共役類は
+  $\{
+    \{1\},
+    \{t, t^4\},
+    \{t^2, t^3\},
+    \{r, rt, rt^2, rt^3, rt^4\}
+  \}$
+  である.\\
+  (b)(2) $\{1\}$については, 明らかに中心化群は$D_5$である.
+  $D_5$の元については任意の$k$に対して$t^k \neq t^{-k}$なので,
+  $\{t, t^4\}, \{t^2, t^3\}$については,
+  どの代表元を選んでも中心化群は$\{1, t, t^2, t^3, t^4\}$である.
+  $rt^k$の形の元については, 上の$3$つ目の式が$r^k$に等しくなるのは$k - 2l \equiv k\ (\mathrm{mod}\ 5)$すなわち$l = 0$の場合のみ,
+  上の$4$つ目の式が$r^k$に等しくなるのは$-k + 2l \equiv k\ (\mathrm{mod}\ 5)$すなわち$k + l \equiv 0\ (\mathrm{mod}\ 5)$の場合のみであるので,
+  $r$の中心化群は$\{1, r\}$である. 代表元として他の$rt^k$をとると, $\{1, rt^{5-k}\}$が中心化群となる.\\
+  (考察1) ある共役類が$1$つの元のみからなるならば, その元は$G$のすべての元と可換であるから, 中心化群は$G$となる.\\
+  (考察2) 共役類が$2$つの元から成るならば, $2$つの元それぞれの中心化群は等しい.
+  このことを以下で示そう.
+  共役類$\{g_1, g_2\}$を考えているとすると,
+  任意の$g \in Z_G(g_1)$について, $g$の共役による作用によって$g_2$は共役類の元$g_1, g_2$のいずれかに移るはずであるが, $g_1$に移ることはありえない.
+  なぜなら, $g^{-1} \in Z_G(g_1)$であって$g^{-1}$の共役による作用で$g_1$が$g_2$に移ることはないからである.
+  したがって$g \in Z_G(g_2)$なので$Z_G(g_1) \subset Z_G(g_2)$. 逆も同様に成り立つので$Z_G(g_1) = Z_G(g_2)$である.
+\end{ans}
+
 \end{document}
