--- a/main.tex
+++ b/main.tex
@@ -1479,4 +1479,9 @@
   より, $\psi$は右作用である. 左右を逆にしても同様のことが言える.
 \end{ans}
 
+\begin{ans}
+  $G$が推移的に作用するとし, $G \cdot x = \{1, \cdots , n\}$であるとする. ($x$は実のところ何でもよい.)
+  このとき命題4.1.23より, $\abs{G} = \abs{G \cdot x}\abs{G_x} = n\abs{G_x}$.
+\end{ans}
+
 \end{document}
