--- a/main.tex
+++ b/main.tex
@@ -1484,4 +1484,21 @@
   このとき命題4.1.23より, $\abs{G} = \abs{G \cdot x}\abs{G_x} = n\abs{G_x}$.
 \end{ans}
 
+\begin{ans}
+  (1) $N$は巡回群であるから, $N$の生成元を$1$つ固定して,
+  その元がどの生成元に移るかを定めることによって, $\mathrm{Aut}N$の元が定まる.
+  逆に, $\mathrm{Aut}N$の元は$N$の生成元を生成元に移すものであるから, $\abs{\mathrm{Aut}N}$は生成元の個数, すなわち$16$に等しい.\\
+  (2) $N$が$G$の中心に含まれないと仮定して, 矛盾を導く.
+  $n \mapsto gng^{-1}$は$N$の自己同型を与えるが, この形の自己同型全体は, $\mathrm{Aut}N$の部分群をなすことに注意する.
+  この部分群は$G$の内部自己同型全体のなす群において$N$上で等しいものを同一視したものであるから,
+  以後$\mathrm{Inn}_GN$と書くことにしよう (これはたぶん一般的な記法ではない).
+  (1) より$\abs{\mathrm{Aut}N} = 16$であったから, $\abs{\mathrm{Inn}_GN}$は$2$の冪である.
+  また, $N$が$G$の中心に含まれないから, $g_0n_0g_0^{-1} \neq n_0$なる$g_0 \in G$, $n_0 \in N$がある.
+  したがって, $\mathrm{Inn}_GN$の$N$への作用$(\phi, n) \mapsto \phi(n)$による$n_0$の軌道の濃度は,
+  $\abs{\mathrm{Inn}_GN}$の約数で, $1$と異なるので偶数である.
+  一方, この作用は$G$の$N$への共役による作用とみなせるから, $n_0$の軌道の濃度は$\abs{G}$の約数でもあるはずである.
+  しかし$\abs{G}$は奇数であったから, 矛盾.\\
+  (考察) $N$の位数を一般の (奇) 素数としたときにも同じ結論が得られるか？ $G$の共役による$N\setminus\{1_G\}$への作用が推移的であればOK. (これは真か？)
+\end{ans}
+
 \end{document}
