--- a/main.tex
+++ b/main.tex
@@ -1501,4 +1501,8 @@
   (考察) $N$の位数を一般の (奇) 素数としたときにも同じ結論が得られるか？ $G$の共役による$N\setminus\{1_G\}$への作用が推移的であればOK. (これは真か？)
 \end{ans}
 
+\begin{ans}
+  (1) $3$は$8$の約数でない, (4) $1$の数が$8$の約数でない
+\end{ans}
+
 \end{document}
