--- a/main.tex
+++ b/main.tex
@@ -1505,4 +1505,10 @@
   (1) $3$は$8$の約数でない, (4) $1$の数が$8$の約数でない
 \end{ans}
 
+\fakesubsection{4.2 対称群の共役類}
+
+\begin{ans}
+  容易なので略.
+\end{ans}
+
 \end{document}
