--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage{commath}
 \usepackage{bm}
 \usepackage{mathtools}
+\usepackage{ytableau}
 
 \theoremstyle{definition}
 \newtheorem{ans}{}
@@ -1509,6 +1510,59 @@
 
 \begin{ans}
   容易なので略.
+\end{ans}
+
+\begin{ans}
+  (1) $n = 5$のヤング図形は以下の$7$つである.
+  \begin{align*}
+    \ytableausetup{smalltableaux}
+    \ydiagram{5}\ \ydiagram{4, 1}\ \ydiagram{3, 2}\ \ydiagram{3, 1, 1}\ \ydiagram{2, 2, 1}\ \ydiagram{2, 1, 1, 1}\ \ydiagram{1, 1, 1, 1, 1}
+  \end{align*}
+  共役類の代表元としては, これらのヤング図形の長さ$2$以上の行に適当に数を当てはめたものをとればよい.
+  たとえば, $(1\ 2\ 3\ 4\ 5)$, $(1\ 2\ 3\ 4)$, $(1\ 2\ 3)(4\ 5)$, $(1\ 2\ 3)$, $(1\ 2)(3\ 4)$, $(1\ 2)$, $1$
+  が代表元である.\\
+  (2) 共役類の中では$\mathrm{sgn}$は一致すること,
+  また$A_5$の共役類は$\mathfrak{S}_5$の共役類と一致するか, またはその細分であることに注意する.
+  このことから, $A_5$の共役類を求めるためには, $\mathfrak{S}_5$の共役類のうち$A_5$に含まれるもののそれぞれが, $A_5$の共役類として細分されているかどうか,
+  もし細分されているならどのように細分されているかを調べればよい.
+  (1) に挙げた代表元のうち, $A_5$に含まれるのは$(1\ 2\ 3\ 4\ 5)$, $(1\ 2\ 3)$, $(1\ 2)(3\ 4)$, $1$の$4$つである.
+
+  \underline{$(1\ 2\ 3\ 4\ 5)$について.}
+  長さ$5$の巡回置換はすべて
+  $(\sigma(1)\ \sigma(2)\ \sigma(3)\ \sigma(4)\ \sigma(5)) = \sigma(1\ 2\ 3\ 4\ 5)\sigma^{-1}$
+  と書けることから, $A_5$において$(1\ 2\ 3\ 4\ 5)$と共役であることは, この$\sigma$が偶置換であることと同値である.
+  一方, $\sigma$が奇置換であるときには,
+  $\sigma(1\ 2\ 3\ 4\ 5)\sigma^{-1} = \sigma(1\ 2)(2\ 1\ 3\ 4\ 5)(1\ 2)\sigma^{-1}$
+  より,この巡回置換は$A_5$において$(2\ 1\ 3\ 4\ 5)$と共役である.
+  したがって$\mathfrak{S}_5$における$(1\ 2\ 3\ 4\ 5)$の共役類は,
+  $A_5$において$(1\ 2\ 3\ 4\ 5)$を代表元とする共役類と$(2\ 1\ 3\ 4\ 5)$を代表元とする共役類とに細分される.
+
+  \underline{$(1\ 2\ 3)$について.}
+  $A_5$の共役による作用についての$(1\ 2\ 3)$の安定化群を$H$とする.
+  明らかに, $\langle(1\ 2\ 3)\rangle \subset H$である.
+  逆に$\nu \in H$とすると, $(\nu(1)\ \nu(2)\ \nu(3)) = \nu(1\ 2\ 3)\nu^{-1} = (1\ 2\ 3)$より
+  数の組として$(\nu(1), \nu(2), \nu(3))$は$(1, 2, 3)$, $(2, 3, 1)$, $(3, 1, 2)$のいずれかに等しい.
+  いずれの場合も, $\nu$を$\{1, 2, 3\}$上に制限したものは, $\langle(1\ 2\ 3)\rangle$に属する.
+  また, $\nu$を$\{1, 2, 3\}$上に制限したものは偶置換であるから, 偶置換$\nu$は$\{4, 5\}$上では恒等写像である.
+  したがって$\nu \in \langle(1\ 2\ 3)\rangle$であるから, $H \subset \langle(1\ 2\ 3)\rangle$.
+  以上により$H = \langle(1\ 2\ 3)\rangle$であることが言えたから,
+  $A_5$の共役による作用についての$(1\ 2\ 3)$の軌道 ($(1\ 2\ 3)$の共役類) の濃度は$\abs{A_5}/\abs{H} = \abs{A_5}/\abs{\langle(1\ 2\ 3)\rangle} = 60 / 3 = 20$.
+  一方, 長さ$3$の巡回置換の個数も${}_5\mathrm{C}_3 \cdot 2 = 20$であるから,
+  長さ$3$の巡回置換はすべて$A_5$において$(1\ 2\ 3)$と共役である.
+  すなわち, $(1\ 2\ 3)$を代表元とする$\mathfrak{S}_5$共役類は$A_5$において細分されておらず, $A_5$の共役類としても$(1\ 2\ 3)$がそのまま代表元となる.
+
+  \underline{$(1\ 2)(3\ 4)$について.}
+  $\sigma$を$(2, 2)$型の置換とする. すなわち$\sigma = (i\ j)(k\ l)$の形で書ける.
+  $\mathfrak{S}_5$における共役として,
+  $\tau = \begin{pmatrix*}
+    1 & 2 & 3 & 4 & 5 \\
+    i & j & k & l & m
+  \end{pmatrix*}$とおいて$\tau(1\ 2)(3\ 4)\tau^{-1} = \sigma$という関係があるが,
+  もし$\tau$が奇置換ならば$\tau$の代わりに$\tau(1\ 2)$を考えることにより,
+  $A_5$においても$\sigma$と$(1\ 2)(3\ 4)$が共役であることが分かる.
+  すなわち, $(1\ 2)(3\ 4)$を代表元とする$\mathfrak{S}_5$共役類は$A_5$において細分されておらず, $A_5$の共役類としても$(1\ 2)(3\ 4)$がそのまま代表元となる.
+
+  \underline{$1$について.} 共役類が$1$元集合なので, そのまま$A_5$の共役類の代表元となっている.
 \end{ans}
 
 \end{document}
