--- a/main.tex
+++ b/main.tex
@@ -1560,9 +1560,19 @@
   \end{pmatrix*}$とおいて$\tau(1\ 2)(3\ 4)\tau^{-1} = \sigma$という関係があるが,
   もし$\tau$が奇置換ならば$\tau$の代わりに$\tau(1\ 2)$を考えることにより,
   $A_5$においても$\sigma$と$(1\ 2)(3\ 4)$が共役であることが分かる.
-  すなわち, $(1\ 2)(3\ 4)$を代表元とする$\mathfrak{S}_5$共役類は$A_5$において細分されておらず, $A_5$の共役類としても$(1\ 2)(3\ 4)$がそのまま代表元となる.
+  すなわち, $(1\ 2)(3\ 4)$を代表元とする$\mathfrak{S}_5$の共役類は$A_5$において細分されておらず, $A_5$の共役類としても$(1\ 2)(3\ 4)$がそのまま代表元となる.
 
   \underline{$1$について.} 共役類が$1$元集合なので, そのまま$A_5$の共役類の代表元となっている.
+\end{ans}
+
+\begin{ans}
+  (1) $\begin{pmatrix*}
+    1 & 2 & 3 & 4 & 5 & 6 \\
+    4 & 1 & 3 & 2 & 6 & 5
+  \end{pmatrix*}$\\
+  (2) $\{1, 2, 3\}$を$\{4, 1, 3\}$に移すような$\nu$については,
+  $\nu(1)$と$\nu(4)$の値を決めれば$1$つに定まる. したがって$\nu$は$3 \cdot 3 = 9$通りある.
+  $\{1, 2, 3\}$を$\{2, 6, 5\}$に移すような$\nu$についても同様. したがって全部で$18$通りである.
 \end{ans}
 
 \end{document}
