--- a/main.tex
+++ b/main.tex
@@ -1575,4 +1575,73 @@
   $\{1, 2, 3\}$を$\{2, 6, 5\}$に移すような$\nu$についても同様. したがって全部で$18$通りである.
 \end{ans}
 
+\begin{ans}
+  (1) 共役による作用での$(1\ 2)$の軌道 (共役類) は$(2)$型の置換からなり, これは全部で${}_4\mathrm{C}_2 = 6$個あるから,
+  $Z_G(\sigma)$の位数, すなわち共役による作用での$(1\ 2)$の安定化群の位数は$\abs{G}/6 = 4$である.
+  一方, 明らかに$(1\ 2), (3\ 4) \in Z_G(\sigma)$であるから,
+  $\langle (1\ 2), (3\ 4) \rangle \subset Z_G(\sigma)$である.
+  $(1\ 2)$と$(3\ 4)$は可換でいずれも位数$2$であって, $\langle (1\ 2), (3\ 4) \rangle$の任意の元は$(1\ 2)^i(3\ 4)^j (i, j = 0, 1)$と書けるので,
+  $\abs{\langle (1\ 2), (3\ 4) \rangle} = 4$である.
+  したがって$Z_G(\sigma) = \langle (1\ 2), (3\ 4) \rangle$.\\
+  (2) 共役による作用での$(1\ 2)(3\ 4)$の軌道は$(2, 2)$型の置換からなり, これは${}_4\mathrm{C}_2/2 = 3$個ある.
+  したがって$\abs{Z_G(\sigma)} = \abs{G}/3 = 8$.
+  まず, 共役による作用で$(1\ 2)$をそれ自身に移すものとして$1, (1\ 2), (3\ 4), (1\ 2)(3\ 4)$があり,
+  $(1\ 2)$を$(3\ 4)$に移すものとして$(1\ 3)(2\ 4), (1\ 4)(2\ 3), (1\ 3\ 2\ 4), (1\ 4\ 2\ 3)$がある.
+  以上を合わせて$8$個なので, これらが$Z_G(\sigma)$をなす.
+  まとめると$Z_G(\sigma) = \langle (1\ 2), (3\ 4), (1\ 3)(2\ 4) \rangle$.\\
+  (3) 共役による作用での$(1\ 2\ 3)$の軌道は$(3)$型の置換からなり, これは${}_4\mathrm{C}_3 \cdot 2 = 8$個ある.
+  したがって$\abs{Z_G(\sigma)} = \abs{G}/8 = 3$.
+  一方, 明らかに$\langle (1\ 2\ 3) \rangle \subset Z_G(\sigma)$であるが,
+  $\abs{\langle (1\ 2\ 3) \rangle} = 3$なので$Z_G(\sigma) = \langle (1\ 2\ 3) \rangle$.\\
+  (4) 共役による作用での$(1\ 2\ 3)$の軌道は$(3)$型の置換からなり, これは${}_5\mathrm{C}_3 \cdot 2 = 20$個ある.
+  したがって$\abs{Z_G(\sigma)} = \abs{G}/20 = 6$.
+  一方, 明らかに$\langle (1\ 2\ 3), (4\ 5) \rangle \subset Z_G(\sigma)$であるが,
+  $\abs{\langle (1\ 2\ 3), (4\ 5) \rangle} = 6$なので,
+  $Z_G(\sigma) = \langle (1\ 2\ 3), (4\ 5) \rangle$.\\
+  (5) 共役による作用での$(1\ 2\ 3)(4\ 5\ 6)$の軌道は$(3, 3)$型の置換からなり, これは${}_6\mathrm{C}_3 \cdot 2 \cdot 2 / 2 = 40$個ある.
+  したがって$\abs{Z_G(\sigma)} = \abs{G}/40 = 18$.
+  まず, 明らかに$\langle (1\ 2\ 3), (4\ 5\ 6), (1\ 4)(2\ 5)(3\ 6) \rangle \subset Z_G(\sigma)$であり,
+  $(1\ 2\ 3)$, $(4\ 5\ 6)$, $(1\ 4)(2\ 5)(3\ 6)$の位数はそれぞれ$3$, $3$, $2$である.
+  そこで, $(1\ 2\ 3)^i(4\ 5\ 6)^j((1\ 4)(2\ 5)(3\ 6))^k$という形の元を考えることにする.
+  $i, j, i^\prime, j^\prime = 0, 1, 2$, また$k, k^\prime = 0, 1$として,
+  \begin{align*}
+    (1\ 2\ 3)^i(4\ 5\ 6)^j((1\ 4)(2\ 5)(3\ 6))^k = (1\ 2\ 3)^{i^\prime}(4\ 5\ 6)^{j^\prime}((1\ 4)(2\ 5)(3\ 6))^{k^\prime}
+  \end{align*}
+  ならば,
+  \begin{align*}
+    (1\ 2\ 3)^{i-i^\prime}(4\ 5\ 6)^{j-j^\prime} = ((1\ 4)(2\ 5)(3\ 6))^{k^\prime - k}
+  \end{align*}
+  となるが, 左辺の位数は$3$の約数, 右辺の位数は$2$の約数なので, 両辺は$1$である.
+  したがって$(i, j, k) = (i^\prime, j^\prime, k^\prime)$なので,
+  $(1\ 2\ 3)^i(4\ 5\ 6)^j((1\ 4)(2\ 5)(3\ 6))^k$の形の元は互いに異なり, $3 \cdot 3 \cdot 2 = 18$個ある.
+  よって$Z_G(\sigma) = \langle (1\ 2\ 3), (4\ 5\ 6), (1\ 4)(2\ 5)(3\ 6) \rangle$.\\
+  (6) 共役による作用での$(1\ 2)(3\ 4)(5\ 6)$の軌道は$(2, 2, 2)$型の置換からなり, これは$5 \cdot 3 = 15$個ある ($1$の行き先と, 残りの$4$個から$1$つ選んだものの行き先とを決めると考えればよい).
+  したがって$\abs{Z_G(\sigma)} = \abs{G}/15 = 48$.
+  まず, 明らかに$\langle (1\ 2), (3\ 4), (5\ 6), (1\ 3)(2\ 4), (1\ 3\ 5)(2\ 4\ 6) \rangle \subset Z_G(\sigma)$であり,
+  生成元の位数はそれぞれ$2$, $2$, $2$, $2$, $3$である.
+  そこで, $(1\ 2)^i(3\ 4)^j(5\ 6)^k((1\ 3)(2\ 4))^l((1\ 3\ 5)(2\ 4\ 6))^m$という形の元を考えることにする.
+  $i, j, k, l, i^\prime, j^\prime, k^\prime, l^\prime = 0, 1$, また$m, m^\prime = 0, 1, 2$として,
+  \begin{align*}
+    (1\ 2)^i&(3\ 4)^j(5\ 6)^k((1\ 3)(2\ 4))^l((1\ 3\ 5)(2\ 4\ 6))^m\\
+    = &(1\ 2)^{i^\prime}(3\ 4)^{j^\prime}(5\ 6)^{k^\prime}((1\ 3)(2\ 4))^{l^\prime}((1\ 3\ 5)(2\ 4\ 6))^{m^\prime}
+  \end{align*}
+  ならば,
+  \begin{align*}
+    (1\ 2)^{i - i^\prime}(3\ 4)^{j - j^\prime}(5\ 6)^{k - k^\prime}
+     = ((1\ 3)(2\ 4))^{l^\prime}((1\ 3\ 5)(2\ 4\ 6))^{m^\prime - m}((1\ 3)(2\ 4))^l
+  \end{align*}
+  となるが, 両辺の$1$, $3$, $5$の行き先の候補を比較すると, 共通するものはそれぞれ$1$, $3$, $5$しかないので,
+  $(i, j, k) = (i^\prime, j^\prime, k^\prime)$である. したがって
+  \begin{align*}
+    ((1\ 3)(2\ 4))^{l + l^\prime} = ((1\ 3\ 5)(2\ 4\ 6))^{m^\prime - m}
+  \end{align*}
+  となるが, 左辺の位数は$2$の約数, 右辺の位数は$3$の約数なので, 両辺は$1$である.
+  したがって$(l, m) = (l^\prime, m^\prime)$なので, 結局$(i, j, k, l, m) = (i^\prime, j^\prime, k^\prime, l^\prime, m^\prime)$.
+  よって$(1\ 2)^i(3\ 4)^j(5\ 6)^k((1\ 3)(2\ 4))^l((1\ 3\ 5)(2\ 4\ 6))^m$という形の元は互いに異なり,
+  $2 \cdot 2 \cdot 2 \cdot 2 \cdot 3 = 48$個ある.
+  $\abs{Z_G(\sigma)} = 48$かつ
+  $\langle (1\ 2), (3\ 4), (5\ 6), (1\ 3)(2\ 4), (1\ 3\ 5)(2\ 4\ 6) \rangle \subset Z_G(\sigma)$であったから,
+  $Z_G(\sigma) = \langle (1\ 2), (3\ 4), (5\ 6), (1\ 3)(2\ 4), (1\ 3\ 5)(2\ 4\ 6) \rangle$.
+\end{ans}
+
 \end{document}
