--- a/main.tex
+++ b/main.tex
@@ -1644,4 +1644,13 @@
   $Z_G(\sigma) = \langle (1\ 2), (3\ 4), (5\ 6), (1\ 3)(2\ 4), (1\ 3\ 5)(2\ 4\ 6) \rangle$.
 \end{ans}
 
+\begin{ans}
+  (1) $Z_G(\sigma) \supset \langle \sigma \rangle$であることは明らか.
+  一方, 共役による作用での$\sigma$の軌道は長さ$n$の巡回置換全体からなるので, 軌道の濃度は$(n - 1)!$である.
+  したがって$\abs{Z_G(\sigma)} = \abs{\mathfrak{S}_n}/(n - 1)! = n$であるから, $Z_G(\sigma) = \langle \sigma \rangle$.\\
+  (2) 明らかに任意の$\tau \in \langle \sigma \rangle \setminus \{1\}$に対して
+  $(1\ 2)\tau(1\ 2) \neq \tau$であるから, $Z_G(\sigma) \cap Z_G((1\ 2)) = \{1\}$.
+  よって$Z_G(\mathfrak{S}_n) = \{1\}$.
+\end{ans}
+
 \end{document}
