remove commath package

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,6 @@
 \documentclass{amsart}
 
 \usepackage{amsmath, amssymb}
-\usepackage{commath}
 \usepackage{bm}
 \usepackage{mathtools}
 \usepackage{ytableau}
@@ -35,6 +34,8 @@
 
 \DeclarePairedDelimiter{\gen}{\langle}{\rangle}
 \DeclarePairedDelimiter{\order}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
 
 \begin{document}
