--- a/main.tex
+++ b/main.tex
@@ -324,7 +324,7 @@
 
 \begin{ans}
   命題2.3.2の条件と同値であることを確かめればよい.
-  $H$が部分群であるとすると, 条件 (3) より$x^{-1} \in H$.
+  $H$が部分群であるとすると, $x, y \in H$ならば条件 (3) より$x^{-1} \in H$.
   さらに条件 (2) より$x^{-1}y \in H$.
   逆に, 群$G$の空でない部分集合$H$について
   「$x, y \in H \Rightarrow x^{-1}y \in H$」
@@ -417,16 +417,15 @@
   このとき, $\mathbb{Q}$の任意の元は$nr\ (n \in \mathbb{Z})$という形で表せるはずだが, $\frac{r}{2} \in \mathbb{Q}$はそうではないので矛盾. \\
   (3) $\mathbb{Q}$の場合と同様. (別解: 巡回群の濃度はたかだか可算だが, $\mathbb{R}$の濃度は非可算なので一致しない.) \\
   (4) $\mathbb{Q}^\times$が巡回群であると仮定して, 生成元が$r$であるとする.
-  明らかに$r \neq \pm 1$である. $-r \in \mathbb{Q}^\times$なので,
-  $r^n = -r$, すなわち$r^{n-1} = -1$となるような$n \in \mathbb{Z}$が存在するはずである.
-  ところがこの式を満たすような$r$は$-1$しかないので矛盾.
+  明らかに$r \neq \pm 1$である. 一方$r^{n} = -1$となるような$n \in \mathbb{Z}$が存在するはずであるが,
+  この式を満たすような$r$は$-1$しかない ($r$を既約分数で表示してみればこのことが分かる) ので矛盾.
   \\
   (5) $\mathbb{Z} \times \mathbb{Z}$が巡回群であると仮定して, 生成元が$(x, y)$であるとする.
   $(nx, ny)\ (n \in \mathbb{Z})$が$\mathbb{Z} \times \mathbb{Z}$のすべての元を渉っている必要があるので,
   $x, y$それぞれが$\mathbb{Z}$の生成元でなれけばならない. よって少なくとも$x \neq 0$である.
   一方, $(x, y + 1) \in \mathbb{Z} \times \mathbb{Z}$を考えると,
   $(x, y + 1) = (nx, ny)$を満たす$n \in \mathbb{Z}$が存在するはずだが,
-  $x = nx$かつ$x \neq 0$より$n = 1$. 一方第$2$成分は$y + 1 \neq y$となり矛盾.
+  第$1$成分について$x = nx$かつ$x \neq 0$より$n = 1$. 一方第$2$成分は$y + 1 = y$となり矛盾.
 \end{ans}
 
 \begin{ans}
@@ -1214,7 +1213,7 @@
 \end{ans}
 
 \begin{ans}
-  (1)
+  (1) (本の解答例に比べるとかなり拙い解法.)
   \begin{align*}
     &yy^{-1} = 1\\
     &yxy^{-1} = x^3\\
@@ -1243,7 +1242,9 @@
 \end{ans}
 
 \begin{ans}
+  $n = 1$の場合は問題の主張は成り立たないので, $n \ge 2$とする.
   $G$のある元$g$について
+  $\norm{\bm{x}} = \norm{\bm{y}}$かつ
   $g\frac{\bm{x}}{\norm{\bm{x}}} = \frac{\bm{y}}{\norm{\bm{y}}}$
   ならば
   $g\bm{x} = \bm{y}$
