--- a/main.tex
+++ b/main.tex
@@ -1659,4 +1659,16 @@
   よって$Z_G(\mathfrak{S}_n) = \{1\}$.
 \end{ans}
 
+\begin{ans}
+  (フォーマルな証明を書くのが難しいので, ひとまずスケッチにとどめておく.)
+  % TODO: ちゃんとした証明を書く
+  $\tau \in Z_G(\sigma)$であるとき, $\sigma$を巡回置換の積で表したものについて,
+  その積を構成する巡回置換たちのうち, 同じ長さのものの間に置換が引き起こされる.
+  したがって, $\tau$に対して, $i = 1, 2,... t$ごとに$a_i$次の置換が定まることになる.
+  この対応は$\mathfrak{S}_{a_1} \times \cdots \mathfrak{S}_{a_t}$への全射準同型を定める.
+  その核は, $\tau$の作用を巡回置換を表す文字の配列に対する形式的なものとみなせば, ヤング図形の"行"ごとにサイクリックに要素をシフトするものであり,
+  $(\mathbb{Z}/j_1\mathbb{Z})^{a_1} \times \cdots \times (\mathbb{Z}/j_t\mathbb{Z})^{a_t}$に同型である.
+  したがって準同型定理により, 求めるべき同型が得られる.
+\end{ans}
+
 \end{document}
